--- a/fashion.css
+++ b/fashion.css
@@ -141,5 +141,10 @@ a {
 @media (max-width: 480px) {
     header h1 {
         width: 100%;
+        font-size: 90px;
+    }
+
+    .links {
+        top: 225px;
     }
 }
