--- a/fashion.css
+++ b/fashion.css
@@ -115,7 +115,7 @@ a {
 
     .links {
         bottom: auto;
-        top: 305px;
+        top: 380px;
         width: 100%;
         text-align: center;
         padding: 0;
@@ -140,11 +140,13 @@ a {
 
 @media (max-width: 480px) {
     header h1 {
-        width: 100%;
+        width: 320px;
         font-size: 90px;
+        margin-top: 40px;
+        margin-bottom: 120px;
     }
 
     .links {
-        top: 325px;
+        top: 210px;
     }
 }
